--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-plugin-typography": "^2.3.18",
-    "gatsby-source-contentful": "^2.1.65",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-source-instagram": "^0.6.0",
+    "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.3.6",
     "leaflet": "^1.6.0",
     "node-sass": "^4.13.0",
